# OpenContact

./: .nojekyll  CLAUDE.md  CONTRAT.md  README.md  app.js  index.html  manifest.webmanifest  oauth.html  sw.js  tests-c8.js  tests-mcp.js  tests.js
.github/workflows/: ci.yml  paquets.yml  release.yml
compagnon/: .gitignore  Cargo.toml  README.md  preparer.mjs
compagnon/app/: compagnon.css  compagnon.js  index.html
compagnon/coeur/: Cargo.toml
compagnon/coeur/src/: anneau.rs  enveloppe.rs  garde.rs  lib.rs  mcp.rs  mission.rs  planifier.rs
compagnon/src-tauri/: Cargo.toml  tauri.conf.json
compagnon/src-tauri/icons/: icon.icns
compagnon/src-tauri/src/: canal.rs  coffrelocal.rs  commandes.rs  envoi.rs  main.rs  mcp.rs  missions.rs  partage.rs  planif.rs  reponses.rs  secrets.rs
design/: .thumbnail  SKILL.md  _kit_loader.js  readme.md  styles.css
design/components/: _style.js
design/guidelines/: colors-accent.html  colors-dark.html  colors-neutral.html  colors-semantic.html  effects-dither.html  effects-relief.html  focus-motion.html  geometry.html  iconography.html  logo-piste-a.html  logo-piste-b.html  logo-piste-c.html  spacing.html  type-mono.html  type-pixel.html  type-scale.html  type-ui.html  voice.html
docs/: audit-securite.md  audit-ux-2026-nouveautes.md  audit-ux-2026.md  inspection-ux.md  plan-v7.md  refonte-brief.md  refonte-calibrage.md  refonte-chantier.md  revue-2026-07.md
docs/fable5/: ANALYSE-SECU-PERF.md  AUDIT-UX.md  CONTEXT.md  ETUDE-COMPAGNON.md  HANDOFF.md  PLAN.md  SPECIFICATIONS.md
engine/: ai.js  assist.js  campaign.js  companion.js  distribution.js  exchange.js  filter.js  geo.js  mailer.js  mcp.js  merge.js  mission.js  model.js  ring.js  storage.js  sync.js  transport.js  vault.js
styles/: app.css
styles/tokens/: base.css  colors.css  effects.css  fonts.css  spacing.css  typography.css
tests/e2e/: README.md  e2e-envoi.mjs  (+22 more)
ui/: actions.js  analyse.js  campagnes.js  capture.js  compagnon.js  connexions.js  contact.js  dates.js  direct.js  docs.js  dom.js  donner.js  echanger.js  edit.js  fiche.js  mail.js  moi.js  pistes.js  profil.js  propositions.js  prospect.js  qr.js  recevoir.js  sort.js  state.js  synclive.js  today.js  tplfield.js  verrou.js
(+74 files in other folders)
