[package]
name = "oc-coeur"
version = "0.1.0"
edition = "2021"
description = "OpenContact Compagnon — la garde des règles critiques (D17)"
license = "MIT"

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
