[package]
name = "oc-compagnon"
version = "0.1.0"
description = "OpenContact Compagnon — l'appoint local de la PWA (envois app fermée, messageries, analyse)"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
oc-coeur = { path = "../coeur" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
